tests/lean/wf2.lean.expected.out
wf2.lean:3:8-3:17: error: tactic 'assumption' failed, 
x y : Nat
⊢ x - 1 < x
